# spotify

./: .gitignore  PROJECT_CONTEXT.md  analytics.py  test1.py
audiolens/: Makefile  OVERNIGHT_RUNBOOK.md  README.md  alembic.ini  docker-compose.overnight.yml  docker-compose.yml  pyproject.toml
audiolens/.github/workflows/: ci.yml
audiolens/data/: catalog.db-journal
audiolens/infra/docker/: api.Dockerfile  embedder.Dockerfile  extractor.Dockerfile  overnight.Dockerfile
audiolens/infra/k8s/: api.yaml  extractor.yaml
audiolens/infra/terraform/: main.tf
audiolens/migrations/: env.py  script.py.mako
audiolens/migrations/versions/: 0001_initial.py  0002_catalog.py
audiolens/scripts/: _dsp_one.py  analyze_previews.py  bulk_ingest.py  download_models.sh  notify_progress.py  reccobeats_client.py  run_overnight.sh  run_pipeline.py  status.sh  status_server.py  ytdlp_resolver.py
audiolens/services/api/app/: main.py
audiolens/services/api/app/core/: config.py
audiolens/services/api/app/db/: models.py  session.py
audiolens/services/api/app/routers/: v1.py
audiolens/services/api/app/schemas/: api.py
audiolens/services/embedder/app/: heads.py
audiolens/services/embedder/app/inference/: indexes.py  worker.py
audiolens/services/embedder/app/models/: encoder.py  registry.py
audiolens/services/embedder/app/training/: train.py
audiolens/services/extractor/app/: pipeline.py  worker.py
audiolens/services/extractor/app/analysis/: extractor.py  harmony.py  rhythm.py  structure.py
audiolens/services/extractor/app/audio/: loader.py
audiolens/services/extractor/app/features/: extractor.py  (+1 more)
audiolens/services/ingest/app/: cli.py  dedup.py  normalize.py  parser.py  sinks.py
audiolens/tests/integration/: test_api_flow.py
audiolens/tests/unit/: test_extractors.py  test_ingest.py
(+11 files in other folders)
