[project]
name = "audiolens"
version = "0.1.0"
description = "Open-source replacement for Spotify Audio Features & Audio Analysis APIs"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "aiokafka>=0.10",
    "minio>=7.2",
    "httpx>=0.27",
    "numpy>=1.26,<2.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "madmom @ git+https://github.com/CPJKU/madmom.git",
    "essentia-tensorflow>=2.1b6.dev1110; sys_platform == 'linux'",
    "torchaudio>=2.2",
    "torch>=2.2",
]
ml = [
    "pytorch-lightning>=2.2",
    "faiss-cpu>=1.8",
    "hnswlib>=0.8",
    "scikit-learn>=1.4",
    "wandb>=0.16",
]
embeddings = [
    "openl3>=0.4.2",
    "laion-clap>=1.1.4",
    "transformers>=4.40",
    # musicfm: pip install git+https://github.com/minzwon/musicfm.git
    # byol-a:  pip install git+https://github.com/nttcslab/byol-a.git
]
ingest = [
    "mutagen>=1.47",
    "pyacoustid>=1.3",  # needs system `fpcalc` (chromaprint)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
